logo alignment issue fix

--- a/css/header.css
+++ b/css/header.css
@@ -1,8 +1,7 @@
 .header-item {
-	height:120px;
+	height:100px;
 	display: inline-block;
 	margin: 2%;
-	
 }
 
 .header h2 {
